[gd_scene load_steps=7 format=3 uid="uid://btxo3vmrwucln"]

[ext_resource type="Script" uid="uid://crkboqxuts7vx" path="res://scenes/menu_options.gd" id="1_t45sc"]
[ext_resource type="Theme" uid="uid://cts0fwcuwbvl0" path="res://theme_default.tres" id="4_soiec"]
[ext_resource type="AudioStream" uid="uid://c8ham3rwfwck1" path="res://audio/se/cardPlace1.ogg" id="6_c4iyh"]
[ext_resource type="Texture2D" uid="uid://bfcdwfmhmx250" path="res://sprites/icons/flag_us.png" id="7_u72o2"]
[ext_resource type="Texture2D" uid="uid://buoii1820488l" path="res://sprites/icons/flag_jp.png" id="8_6lpfh"]
[ext_resource type="Texture2D" uid="uid://bq5uf8dxjiv3x" path="res://sprites/icons/discord.png" id="9_picb0"]

[node name="OptionsMenu" type="Node2D"]
auto_translate_mode = 1
position = Vector2(0, -24)
script = ExtResource("1_t45sc")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 24)

[node name="Languages" type="Node2D" parent="."]
position = Vector2(832, -448)

[node name="LangUS" type="Button" parent="Languages"]
offset_left = -88.0
offset_top = -32.0
offset_right = -8.0
offset_bottom = 28.0
theme = ExtResource("4_soiec")

[node name="FlagUS" type="Sprite2D" parent="Languages/LangUS"]
position = Vector2(40, 29)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_u72o2")

[node name="LangJP" type="Button" parent="Languages"]
offset_left = 8.0
offset_top = -32.0
offset_right = 88.0
offset_bottom = 28.0
theme = ExtResource("4_soiec")

[node name="FlagJP" type="Sprite2D" parent="Languages/LangJP"]
position = Vector2(40, 29)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_6lpfh")

[node name="Links" type="Node2D" parent="."]
visible = false
position = Vector2(-928, -448)

[node name="LinkDiscord" type="Button" parent="Links"]
offset_left = 5.0
offset_top = -32.0
offset_right = 85.0
offset_bottom = 28.0
theme = ExtResource("4_soiec")

[node name="IconDiscord" type="Sprite2D" parent="Links/LinkDiscord"]
position = Vector2(40, 29)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_picb0")

[node name="ButtonExit" type="Button" parent="."]
offset_left = -920.0
offset_top = -482.0
offset_right = -620.0
offset_bottom = -434.0
theme = ExtResource("4_soiec")
text = "EXIT"
metadata/_edit_use_anchors_ = true

[node name="Header" type="Panel" parent="."]
offset_left = -300.0
offset_top = -318.0
offset_right = 300.0
offset_bottom = -264.0
theme = ExtResource("4_soiec")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Header"]
layout_mode = 0
offset_top = 8.0
offset_right = 600.0
offset_bottom = 46.0
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Options" type="Panel" parent="."]
offset_left = -300.0
offset_top = -253.0
offset_right = 300.0
offset_bottom = 419.0
theme = ExtResource("4_soiec")
metadata/_edit_use_anchors_ = true

[node name="VolumeMusic" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 178.0
offset_top = 40.0
offset_right = 478.0
offset_bottom = 70.0
max_value = 200.0
value = 100.0
tick_count = 5
ticks_on_borders = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Options/VolumeMusic"]
layout_mode = 0
offset_left = -137.0
offset_top = 4.0
offset_right = -33.0
offset_bottom = 34.0
text = "Music"
metadata/_edit_use_anchors_ = true

[node name="Value" type="Label" parent="Options/VolumeMusic"]
layout_mode = 0
offset_left = -129.0
offset_top = 4.0
offset_right = -6.0
offset_bottom = 34.0
text = "100%"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Mute" type="CheckBox" parent="Options/VolumeMusic"]
layout_mode = 0
offset_left = 317.0
offset_top = 1.0
offset_right = 407.0
offset_bottom = 31.0
text = "Mute"
metadata/_edit_use_anchors_ = true

[node name="VolumeSounds" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 178.0
offset_top = 96.0
offset_right = 478.0
offset_bottom = 126.0
max_value = 200.0
value = 100.0
tick_count = 5
ticks_on_borders = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Options/VolumeSounds"]
layout_mode = 0
offset_left = -137.0
offset_top = 4.0
offset_right = -33.0
offset_bottom = 34.0
text = "Sounds"
metadata/_edit_use_anchors_ = true

[node name="Value" type="Label" parent="Options/VolumeSounds"]
layout_mode = 0
offset_left = -129.0
offset_top = 4.0
offset_right = -6.0
offset_bottom = 34.0
text = "100%"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Mute" type="CheckBox" parent="Options/VolumeSounds"]
layout_mode = 0
offset_left = 317.0
offset_top = 1.0
offset_right = 407.0
offset_bottom = 31.0
text = "Mute"
metadata/_edit_use_anchors_ = true

[node name="AudioStream" type="AudioStreamPlayer2D" parent="Options/VolumeSounds"]
position = Vector2(122, 181)
stream = ExtResource("6_c4iyh")
bus = &"Sounds"

[node name="UsernameLabel" type="Label" parent="Options"]
layout_mode = 0
offset_left = 50.0
offset_top = 193.0
offset_right = 171.0
offset_bottom = 223.0
text = "Online Name:"

[node name="Username" type="TextEdit" parent="Options"]
layout_mode = 0
offset_left = 184.0
offset_top = 184.0
offset_right = 537.0
offset_bottom = 227.0
placeholder_text = "A-Z, 0-9, and underscores"

[node name="RotateEnemyCards" type="CheckBox" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.130952
anchor_bottom = 0.130952
offset_left = 48.0
offset_top = 168.0
offset_right = 546.0
offset_bottom = 198.0
tooltip_text = "Makes it so that enemy cards will be
right-side up, not upside down"
text = "Make enemy cards right-side up"
metadata/_edit_use_anchors_ = true

[node name="AlwaysShowATKBoosts" type="CheckBox" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.130952
anchor_bottom = 0.130952
offset_left = 48.0
offset_top = 224.0
offset_right = 555.0
offset_bottom = 254.0
tooltip_text = "Makes ATK bonuses with the \"during the battle phase\"
condition show on the field stat displays for all phases."
text = "Show Battle Phase ATK boosts during all phases"
metadata/_edit_use_anchors_ = true

[node name="DisableBlockReminder" type="CheckBox" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.214285
anchor_bottom = 0.214285
offset_left = 48.0
offset_top = 224.0
offset_right = 555.0
offset_bottom = 254.0
tooltip_text = "Stop showing a message reminding you of your
block phase if you make no move in a few seconds."
text = "Disable Block Phase reminder"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Languages/LangUS" to="." method="_on_lang_us_pressed"]
[connection signal="pressed" from="Languages/LangJP" to="." method="_on_lang_jp_pressed"]
[connection signal="pressed" from="Links/LinkDiscord" to="." method="_on_link_discord_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="value_changed" from="Options/VolumeMusic" to="." method="_on_volume_music_value_changed"]
[connection signal="toggled" from="Options/VolumeMusic/Mute" to="." method="_on_music_mute_toggled"]
[connection signal="drag_ended" from="Options/VolumeSounds" to="." method="_on_volume_sounds_drag_ended"]
[connection signal="value_changed" from="Options/VolumeSounds" to="." method="_on_volume_sounds_value_changed"]
[connection signal="toggled" from="Options/VolumeSounds/Mute" to="." method="_on_sounds_mute_toggled"]
[connection signal="text_changed" from="Options/Username" to="." method="_on_username_text_changed"]
[connection signal="toggled" from="Options/RotateEnemyCards" to="." method="_on_rotate_enemy_cards_toggled"]
[connection signal="toggled" from="Options/AlwaysShowATKBoosts" to="." method="_on_always_show_atk_boosts_toggled"]
[connection signal="toggled" from="Options/DisableBlockReminder" to="." method="_on_disable_block_reminder_toggled"]
